---
source: crates/pixi_manifest/src/toml/pypi_options.rs
expression: options
---
PypiOptions {
    index_url: Some(
        Url {
            scheme: "https",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: Some(
                Domain(
                    "pypi.org",
                ),
            ),
            port: None,
            path: "/simple",
            query: None,
            fragment: None,
        },
    ),
    extra_index_urls: Some(
        [
            PypiExtraIndex {
                url: Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "pypi.org",
                        ),
                    ),
                    port: None,
                    path: "/simple",
                    query: None,
                    fragment: None,
                },
                exclude_newer: None,
            },
            PypiExtraIndex {
                url: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/path/to/simple",
                    query: None,
                    fragment: None,
                },
                exclude_newer: None,
            },
        ],
    ),
    find_links: Some(
        [
            Path(
                "../",
            ),
            Url(
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "google.com",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
        ],
    ),
    no_build_isolation: Packages(
        {
            PackageName(
                "sigma",
            ),
        },
    ),
    index_strategy: Some(
        FirstIndex,
    ),
    prerelease_mode: Some(
        Allow,
    ),
    no_build: Some(
        All,
    ),
    dependency_overrides: None,
    no_binary: Some(
        Packages(
            {
                PackageName(
                    "package1",
                ),
                PackageName(
                    "package2",
                ),
            },
        ),
    ),
    skip_wheel_filename_check: None,
}
